--- a/02.CssSelectorsColorsTextsIcons/Task1.html
+++ b/02.CssSelectorsColorsTextsIcons/Task1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>02.CssSelectorsColorsTextsIcons</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Task1.css">
 </head>
 
 <body>
