--- a/02.CssSelectorsColorsTextsIcons/Task1.html
+++ b/02.CssSelectorsColorsTextsIcons/Task1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>02.CssSelectorsColorsTextsIcons</title>
+    <title>Task1</title>
     <link rel="stylesheet" href="./Task1.css">
 </head>
 
