--- a/02.CssSelectorsColorsTextsIcons/Task1.html
+++ b/02.CssSelectorsColorsTextsIcons/Task1.html
@@ -47,7 +47,7 @@
 
         <div><span id="idElement">inside div but not outside span with id element</span></div> <br>
 
-        <div><span class="classElement2">inside div but not outside span with another class element</span></div> <br>
+        <div  class="classElement2"><span>inside div but not outside span with another class element</span></div> <br>
 
         <div class="links">
             <div id="geeksforgeeks"><a href="https://www.geeksforgeeks.org/">click here for geeksforgeeks.com</a>
