--- a/02.CssSelectorsColorsTextsIcons/Task2.html
+++ b/02.CssSelectorsColorsTextsIcons/Task2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Task2</title>
-    <link rel="stylesheet" href="Task2.css">
+    <link rel="stylesheet" href="./Css/Task2.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
 </head>
 
